--- a/style.css
+++ b/style.css
@@ -9,15 +9,20 @@
   font-family: vietnam;
   
 }
-
-body{
-  color: #fff;
+html{
   background-image: url(assets/bg-image.svg);
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: auto;
+  width: 100%;
+  height: 100%;
+}
+
+body{
+
+  color: #fff;
   padding: 10px 30px;
-  width: 100vw;
-  height: 100vh;
+  
+
 }
 
 header> img{
@@ -56,7 +61,7 @@ main{
   background: #CDD5E040;
   border-radius: 15px;
   padding: 30px;
-  width: 400px;
+  width: 90%;
 }
 
 .contact > form {
@@ -102,7 +107,7 @@ input[type="submit"]{
     width: 50%;
   }
   .contact{
-    width: 80%;
+    width: 70%;
   }
 }
 
