--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@
 html{
   background-image: url(assets/bg-image.svg);
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
+
   width: 100%;
   height: 100%;
 }
